--- a/IOS-Assignment-1-SlotMachine/Base.lproj/Main.storyboard
+++ b/IOS-Assignment-1-SlotMachine/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,146 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="IOS_Assignment_1_SlotMachine" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y07-Is-BGF">
+                                <rect key="frame" x="320" y="54" width="70" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="Q27-EY-or5"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" image="exit.png" title=""/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SZI-Wb-Kyz">
+                                <rect key="frame" x="0.0" y="54" width="70" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="5ks-Sc-hWY"/>
+                                    <constraint firstAttribute="width" constant="70" id="U3E-UI-2eJ"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" image="reset.png" title=""/>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="jackpot.png" translatesAutoresizingMaskIntoConstraints="NO" id="UHB-Or-FXa">
+                                <rect key="frame" x="45" y="118" width="319" height="152"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="152" id="RhG-ZH-ArI"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wfE-NL-LzZ">
+                                <rect key="frame" x="243" y="647" width="140" height="140"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="140" id="LQU-wI-sD8"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" image="rotate.png">
+                                    <color key="baseBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="component.png" translatesAutoresizingMaskIntoConstraints="NO" id="5Fa-f6-7Dq">
+                                <rect key="frame" x="25" y="278" width="358" height="337"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SPIN TO WIN !!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wvU-Be-JcX">
+                                <rect key="frame" x="31" y="622.33333333333337" width="329" height="41.666666666666629"/>
+                                <fontDescription key="fontDescription" name="Impact" family="Impact" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add 1000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jO5-f7-vOw">
+                                <rect key="frame" x="122" y="696.66666666666663" width="55" height="41"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="41" id="VGW-Se-ehF"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="sub.png" translatesAutoresizingMaskIntoConstraints="NO" id="Jd8-FO-cNE">
+                                <rect key="frame" x="54" y="687" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="sRe-cZ-uje"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="add.png" translatesAutoresizingMaskIntoConstraints="NO" id="Z24-IC-m1s">
+                                <rect key="frame" x="185" y="687" width="60" height="60"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dollar.png" translatesAutoresizingMaskIntoConstraints="NO" id="0A1-d2-Ezc">
+                                <rect key="frame" x="63" y="754.66666666666663" width="38" height="75"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="38" id="0ug-T1-I1E"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1000 $" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pCS-W5-CaK">
+                                <rect key="frame" x="109" y="758.66666666666663" width="126" height="67"/>
+                                <fontDescription key="fontDescription" name="Impact" family="Impact" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Z24-IC-m1s" secondAttribute="trailing" constant="145" id="1PS-ha-Py8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5Fa-f6-7Dq" secondAttribute="trailing" constant="7" id="2lG-VO-YL9"/>
+                            <constraint firstItem="pCS-W5-CaK" firstAttribute="centerY" secondItem="0A1-d2-Ezc" secondAttribute="centerY" id="3su-aQ-4kX"/>
+                            <constraint firstItem="Jd8-FO-cNE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="54" id="7dZ-sD-mbT"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="pCS-W5-CaK" secondAttribute="bottom" constant="-15.666666666666629" id="8W4-2k-Szh"/>
+                            <constraint firstItem="jO5-f7-vOw" firstAttribute="leading" secondItem="Jd8-FO-cNE" secondAttribute="trailing" constant="8" id="8sl-f1-9h9"/>
+                            <constraint firstItem="wfE-NL-LzZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="243" id="APN-0k-J7j"/>
+                            <constraint firstItem="SZI-Wb-Kyz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Bjk-6f-kwt"/>
+                            <constraint firstItem="Y07-Is-BGF" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Eod-EH-HWQ"/>
+                            <constraint firstItem="wvU-Be-JcX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="IC7-ow-Ebw"/>
+                            <constraint firstItem="UHB-Or-FXa" firstAttribute="centerX" secondItem="5Fa-f6-7Dq" secondAttribute="centerX" id="Lwz-eG-fxM"/>
+                            <constraint firstItem="pCS-W5-CaK" firstAttribute="top" secondItem="Z24-IC-m1s" secondAttribute="bottom" constant="12" id="NKh-zp-IQZ"/>
+                            <constraint firstItem="wfE-NL-LzZ" firstAttribute="top" secondItem="5Fa-f6-7Dq" secondAttribute="bottom" constant="32" id="O1b-VG-DbT"/>
+                            <constraint firstItem="5Fa-f6-7Dq" firstAttribute="top" secondItem="UHB-Or-FXa" secondAttribute="bottom" constant="8" id="R2c-Nn-aHf"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="wvU-Be-JcX" secondAttribute="bottom" constant="146" id="W6J-sH-PXU"/>
+                            <constraint firstItem="Z24-IC-m1s" firstAttribute="centerY" secondItem="wfE-NL-LzZ" secondAttribute="centerY" id="XVZ-7K-kuO"/>
+                            <constraint firstItem="SZI-Wb-Kyz" firstAttribute="top" secondItem="Y07-Is-BGF" secondAttribute="top" id="aQ1-aq-sm4"/>
+                            <constraint firstItem="Jd8-FO-cNE" firstAttribute="top" secondItem="Z24-IC-m1s" secondAttribute="top" id="c9l-8w-mV5"/>
+                            <constraint firstItem="jO5-f7-vOw" firstAttribute="bottom" secondItem="Z24-IC-m1s" secondAttribute="bottom" constant="-9" id="gPI-uX-06O"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wvU-Be-JcX" secondAttribute="trailing" constant="30" id="gsl-Ad-5va"/>
+                            <constraint firstItem="SZI-Wb-Kyz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="7" id="h9J-VM-amb"/>
+                            <constraint firstItem="5Fa-f6-7Dq" firstAttribute="trailing" secondItem="wfE-NL-LzZ" secondAttribute="trailing" id="iZG-SW-LpC"/>
+                            <constraint firstItem="UHB-Or-FXa" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="71" id="l08-yh-5XU"/>
+                            <constraint firstItem="0A1-d2-Ezc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="63" id="lim-3U-pJS"/>
+                            <constraint firstItem="jO5-f7-vOw" firstAttribute="centerY" secondItem="Z24-IC-m1s" secondAttribute="centerY" id="lnB-ed-C5i"/>
+                            <constraint firstItem="Jd8-FO-cNE" firstAttribute="leading" secondItem="wvU-Be-JcX" secondAttribute="leading" constant="23" id="m2z-ar-1rw"/>
+                            <constraint firstItem="UHB-Or-FXa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="45" id="o1f-nO-Vgv"/>
+                            <constraint firstItem="pCS-W5-CaK" firstAttribute="leading" secondItem="0A1-d2-Ezc" secondAttribute="trailing" constant="8" id="o43-hW-6XN"/>
+                            <constraint firstItem="Z24-IC-m1s" firstAttribute="leading" secondItem="Jd8-FO-cNE" secondAttribute="trailing" constant="71" id="ojV-03-7kx"/>
+                            <constraint firstItem="0A1-d2-Ezc" firstAttribute="top" secondItem="Jd8-FO-cNE" secondAttribute="bottom" constant="8" id="pqg-rj-sc0"/>
+                            <constraint firstItem="Z24-IC-m1s" firstAttribute="leading" secondItem="jO5-f7-vOw" secondAttribute="trailing" constant="8" id="qOp-wa-rWS"/>
+                            <constraint firstItem="5Fa-f6-7Dq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="25" id="qnB-lw-3Rd"/>
+                            <constraint firstItem="wvU-Be-JcX" firstAttribute="top" secondItem="Jd8-FO-cNE" secondAttribute="bottom" constant="-124.33333333333337" id="sMa-qC-qWf"/>
+                            <constraint firstItem="wfE-NL-LzZ" firstAttribute="leading" secondItem="pCS-W5-CaK" secondAttribute="trailing" constant="8" id="saY-lo-Qli"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="wfE-NL-LzZ" secondAttribute="bottom" constant="23" id="v1E-bl-BNQ"/>
+                            <constraint firstItem="SZI-Wb-Kyz" firstAttribute="bottom" secondItem="Y07-Is-BGF" secondAttribute="bottom" id="wf7-7Y-0y0"/>
+                            <constraint firstItem="Jd8-FO-cNE" firstAttribute="bottom" secondItem="Z24-IC-m1s" secondAttribute="bottom" id="wi1-qU-Pik"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="exitBtn" destination="Y07-Is-BGF" id="dpK-Yn-Wua"/>
+                        <outlet property="resetBt" destination="SZI-Wb-Kyz" id="Jnf-Lo-B6f"/>
+                        <outlet property="spinBtn" destination="wfE-NL-LzZ" id="L89-w9-FLv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="135.38461538461539" y="3.5545023696682461"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="add.png" width="40" height="40"/>
+        <image name="component.png" width="352" height="391"/>
+        <image name="dollar.png" width="512" height="512"/>
+        <image name="exit.png" width="70" height="70"/>
+        <image name="jackpot.png" width="384" height="384"/>
+        <image name="reset.png" width="70" height="70"/>
+        <image name="rotate.png" width="140" height="140"/>
+        <image name="sub.png" width="40" height="40"/>
+    </resources>
 </document>
