--- a/IOS-Assignment-1-SlotMachine/Base.lproj/LaunchScreen.storyboard
+++ b/IOS-Assignment-1-SlotMachine/Base.lproj/LaunchScreen.storyboard
@@ -15,7 +15,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="jackpot.png" translatesAutoresizingMaskIntoConstraints="NO" id="ph8-yb-cJK">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="ph8-yb-cJK">
                                 <rect key="frame" x="16" y="303" width="358" height="238"/>
                             </imageView>
                         </subviews>
@@ -35,6 +35,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="jackpot.png" width="384" height="384"/>
+        <image name="logo.png" width="428" height="141"/>
     </resources>
 </document>
