--- a/IOS-Assignment-1-SlotMachine/Base.lproj/Main.storyboard
+++ b/IOS-Assignment-1-SlotMachine/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                                     <constraint firstAttribute="width" constant="70" id="Q27-EY-or5"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" image="exit.png" title=""/>
+                                <buttonConfiguration key="configuration" style="filled" image="exiqt.png" title=""/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SZI-Wb-Kyz">
                                 <rect key="frame" x="0.0" y="54" width="70" height="70"/>
@@ -32,7 +32,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" image="reset.png" title=""/>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="jackpot.png" translatesAutoresizingMaskIntoConstraints="NO" id="UHB-Or-FXa">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="UHB-Or-FXa">
                                 <rect key="frame" x="45" y="118" width="319" height="152"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="152" id="RhG-ZH-ArI"/>
@@ -44,11 +44,11 @@
                                     <constraint firstAttribute="height" constant="140" id="LQU-wI-sD8"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" image="rotate.png">
+                                <buttonConfiguration key="configuration" style="filled" image="spin.png">
                                     <color key="baseBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="component.png" translatesAutoresizingMaskIntoConstraints="NO" id="5Fa-f6-7Dq">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main.png" translatesAutoresizingMaskIntoConstraints="NO" id="5Fa-f6-7Dq">
                                 <rect key="frame" x="25" y="278" width="358" height="337"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SPIN TO WIN !!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wvU-Be-JcX">
@@ -143,13 +143,13 @@
         </scene>
     </scenes>
     <resources>
-        <image name="add.png" width="40" height="40"/>
-        <image name="component.png" width="352" height="391"/>
-        <image name="dollar.png" width="512" height="512"/>
-        <image name="exit.png" width="70" height="70"/>
-        <image name="jackpot.png" width="384" height="384"/>
+        <image name="add.png" width="70" height="70"/>
+        <image name="dollar.png" width="50" height="50"/>
+        <image name="exiqt.png" width="70" height="70"/>
+        <image name="logo.png" width="428" height="141"/>
+        <image name="main.png" width="352" height="391"/>
         <image name="reset.png" width="70" height="70"/>
-        <image name="rotate.png" width="140" height="140"/>
-        <image name="sub.png" width="40" height="40"/>
+        <image name="spin.png" width="140" height="140"/>
+        <image name="sub.png" width="70" height="70"/>
     </resources>
 </document>
